added π as number

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,6 +1,9 @@
-<div #test>
+<div>
   <canvas #canvas width="500px" height="500px" style="margin: 15px; border: 1px solid black;"></canvas>
 </div>
 <div>
   <button style="margin: 15px;" (click)="start()">Start</button>
+</div>
+<div style="margin: 15px;">
+  π ≃ {{pi}}
 </div>
