--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -3,8 +3,8 @@
 </div>
 <div class="set-margin">
   <label for="iterationInput">Amount of iterations</label>
-  <input style="margin-left: 5px;" id="iterationInput" #iterationInput type="number">
-  <button style="margin-left: 5px;" (click)="start()">Calculate π</button>
+  <input id="iterationInput" #iterationInput type="number">
+  <button (click)="start()">Calculate π</button>
 </div>
 <div class="set-margin">
   π ≃ {{pi}}
